--- a/gameplayProgrammingGameCraft/gameplayProgrammingGameCraft.vcxproj
+++ b/gameplayProgrammingGameCraft/gameplayProgrammingGameCraft.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Block.cpp" />
+    <ClCompile Include="CheckPoint.cpp" />
     <ClCompile Include="Credits.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Menu.cpp" />
@@ -137,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h" />
+    <ClInclude Include="CheckPoint.h" />
     <ClInclude Include="Credits.h" />
     <ClInclude Include="Enums.h" />
     <ClInclude Include="Game.h" />
