--- a/gameplayProgrammingGameCraft/gameplayProgrammingGameCraft.vcxproj.filters
+++ b/gameplayProgrammingGameCraft/gameplayProgrammingGameCraft.vcxproj.filters
@@ -65,5 +65,14 @@
     <ClInclude Include="CheckPoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Particle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Fire.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ParticleSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
