--- a/gameplayProgrammingGameCraft/gameplayProgrammingGameCraft.vcxproj
+++ b/gameplayProgrammingGameCraft/gameplayProgrammingGameCraft.vcxproj
@@ -141,7 +141,7 @@
     <ClInclude Include="CheckPoint.h" />
     <ClInclude Include="Credits.h" />
     <ClInclude Include="Enums.h" />
-    <ClInclude Include="Fire.h" />
+    <ClInclude Include="Sparkle.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Particle.h" />
