--- a/gameplayProgrammingGameCraft/gameplayProgrammingGameCraft.vcxproj.filters
+++ b/gameplayProgrammingGameCraft/gameplayProgrammingGameCraft.vcxproj.filters
@@ -68,7 +68,7 @@
     <ClInclude Include="Particle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Fire.h">
+    <ClInclude Include="Sparkle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
